PHP                                                                        NEWS
|||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
?? ??? 2009, PHP 5.3.0 Alpha 4
- Upgraded bundled sqlite to version 3.6.7. (Scott)

- Deprecated session_register(), session_unregister() and
  session_is_registered(). (Hannes)

- Changed dl() to be disabled by default. Enabled only when explicitly
  registered by the SAPI layer. Enabled only with CLI, CGI and EMBED. (Dmitry)
- Changed opendir(), dir() and scandir() to use default context when no context
  argument is passed. (Sara)
- Changed open_basedir to allow tightening in runtime contexts. (Sara)
- Re-enabled socket_create_pair() on Windows (Kalle)

- Added json_last_error() to return any error information from json_decode().
  (Scott)
- Added gethostname() to return the current system host name. (Ilia)
- Added shm_has_var() function. (Mike)
- Added depth parameter to json_decode() to lower the nesting depth from the
  maximum if required. (Scott)
- Added ICU support to SQLite3 when using the bundled version. (Scott)
- Enabled the salsa hashing functions. (Scott)

- Fixed bug #46957 (The tokenizer returns deprecated values). (Felipe)
- Fixed bug #46944 (UTF-8 characters outside the BMP aren't encoded correctly).
  (Scott)
- Fixed bug #46849 (Cloning DOMDocument doesn't clone the properties). (Rob)
- Fixed bug #46847 (phpinfo() is missing some settings). (Hannes)
- Fixed bug #46844 (php scripts or included files with first line starting
  with # have the 1st line missed from the output). (Ilia)
- Fixed bug #46811 (ini_set() doesn't return false on failure). (Hannes)
- Fixed bug #46763 (mb_stristr() wrong output when needle does not exist).
  (Henrique M. Decaria)
- Fixed bug #46746 (xmlrpc_decode_request outputs non-suppressable error when
  given bad data). (Ilia)
- Fixed bug #46738 (Segfault when mb_detect_encoding() fails). (Scott)
- Fixed bug #46681 (mkdir() fails silently on PHP 5.3). (Hannes)